tests/suite/checker/errors/unbound/simple.kind2
Main (a: U60): U60
Main a = (+ a b)